The map file has been updated for the following Bug changes: + Bug 260920. Hover on History view pin toolbar needs inconsistent (FIXED) + Bug 293551. Columns are no longer displayed in the History view (FIXED) + Bug 296694. Removing a synchronization when 'Link with Editor' is enabled throws NPE (FIXED)
The following projects have changed:
org.eclipse.team.cvs.ui
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (December 09, 2009, 12:32 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260920">Bug 260920</a>. Hover on History view pin toolbar needs inconsistent (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293551">Bug 293551</a>. Columns are no longer displayed in the History view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296694">Bug 296694</a>. Removing a synchronization when 'Link with Editor' is enabled throws NPE (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 07, 2009, 5:12 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
