--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 09, 2009, 3:40 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278939">Bug 278939</a>. [Perspectives] Grammar mistake in message. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296646">Bug 296646</a>. Creating regular file under group gives wrong warning in wizard (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=297338">Bug 297338</a>. [LinkedResources] Group icon should have transparent background (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 07, 2009, 4:09 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
