--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 09, 2009, 2:29 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296565">Bug 296565</a>. Make group creation an advanced option in the folder (NEW)<br>
+  </p>
+
 <p>Integration Build (December 09, 2009, 3:40 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
