--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -22,7 +22,7 @@
 methods allows for the Ctrl key modifier to be used to open the last launched launch configuration when clicking on any launch history action.
 <p><strong>Action required:</strong> This is a backwards compatible change. No action required. </p>
 
-<h3>ILaunchManager and LaunchManager base class</h3>
+<h3>ILaunchManager</h3>
 <p><strong>What is affected:</strong>
 <ul>
   <li>Method addition: <code>public String generateLaunchConfigurationName(String namePrefix)</code> </li>
@@ -80,6 +80,15 @@ the validation for the <code>generateLaunchConfigurationName(String namePrefix)<
  launch configuration's <code>launch(...)</code> method was called. The value of the launch attribute is a 
  <code>String</code> representing a <code>long</code> generated from <code>System.currentTimeMillis()</code>. The attribute value
  can be obtained from <code>ILaunch.getAttrbute(DebugPlugin.ATTR_LAUNCH_TIMESTAMP)</code>.
+<p><strong>Action required:</strong> This is a backwards compatible change. No action required. </p>
+
+<h3>IDetailPane3</h3>
+<p><strong>What is affected:</strong>
+<ul>
+  <li>Interface addition: <code>org.eclipse.debug.ui.IDetailPane3</code></li>
+</ul>
+<p><strong>Description:</strong>An optional interface that detail pane extensions may implement in order
+ to interact with the containing part's <code>ISaveablePart</code> function.
 <p><strong>Action required:</strong> This is a backwards compatible change. No action required. </p>
 
 <p>&nbsp;</p>
