*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,23 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 05, 2010, 3:32 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=158642">Bug 158642</a>. [Workbench] Hide toolbar not persisted (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=243381">Bug 243381</a>. [Markers] Problems list needs a tooltip for descripton field (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255629">Bug 255629</a>. [StatusHandling]WorkbenchStatusDialog needs refactoring (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259955">Bug 259955</a>. [Commands] Can't add "Save All" command to main toolbar (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=273806">Bug 273806</a>. [GlobalActions] [KeyBindings] Shortcut key for properties should be changed to Cmd+I on Mac? (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=279235">Bug 279235</a>. [JFace] MessageDialog#getButton(int) breaks contract of Dialog#getButton(int) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296159">Bug 296159</a>. [Progress] WorkbenchSiteProgressService keeps showing CURSOR_APPSTARTING when Job canceled before it is started (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296599">Bug 296599</a>. Add ability to run e4 based tests using PDE's JUnit Plug-in Test (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296801">Bug 296801</a>. [Wizards] Add keywords for Workbench Wizards (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=297728">Bug 297728</a>. [Filters] IFileInfoMatcherDescription and FileInfoMatcherDescription cleanup (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298748">Bug 298748</a>. [ErrorHandling] Support tray should be visible only if there is something to display (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298850">Bug 298850</a>. [ErrorHandling] 1 error/9 failures in StatusHandlingTestSuite (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 09, 2009, 2:29 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
