*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 07, 2010, 9:31 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296142">Bug 296142</a>. [KeyBindings] Set extension point "org.eclipse.ui.bindings" 's element 'sequenceModifier' becomes disabled key bindings. (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 07, 2010, 1:09 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
