*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,24 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 11, 2010, 6:03 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296159">Bug 296159</a>. [Progress] WorkbenchSiteProgressService keeps showing CURSOR_APPSTARTING when Job canceled before it is started (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296253">Bug 296253</a>. [CommonNavigator] An empty label is not properly shown when it is the only contributed label (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=297508">Bug 297508</a>. [IDE] [Dialogs] Resource filters dialog doesn't honor dialog font (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298671">Bug 298671</a>. Implement enough compatibility to bring up a simple view (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299207">Bug 299207</a>. [CommonNavigator] Refactor NavigatorContentServiceContentProvider (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299208">Bug 299208</a>. [CommonNavigator] More helpful error message when an invalid suppressedExtensionId is referenced (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299209">Bug 299209</a>. [CommonNavigator] Clean up error reporting for pipelined extensions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299210">Bug 299210</a>. [CommonNavigator] Test improvements (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299246">Bug 299246</a>. [CommonNavigator] Add model objects for new CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299249">Bug 299249</a>. [CommonNavigator] Add ResourceWrapperContent/Label provider for new CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299251">Bug 299251</a>. [CommonNavigator] Model label and content providers for additional pipeline CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299255">Bug 299255</a>. [CommonNavigator] Hook new CNF tests to plugin.xml (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299304">Bug 299304</a>. [CommonNavigator] Test contribution for CNF (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 05, 2010, 3:32 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
