The map file has been updated for the following Bug changes: + Bug 73683. [Apply Patch] Add URL option Apply Patch dialog (FIXED) + Bug 272865. 'Ignore White Space Where Applicable' should not change caret location (FIXED) + Bug 287421. 'Copy Current Change' should not go to next difference (FIXED) + Bug 297950. CompareEditorInputs are leaked when reusing editors (ASSIGNED) + Bug 298034. Add keywords for Workbench Wizards (FIXED) + Bug 298843. org.eclipse.jsch.core falsely depends on .core.resources, barring use in RCP (FIXED) + Bug 299100. AFE in SynchronizeView.getViewer (FIXED) + Bug 299262. The API problem filter for: 'The method org.eclipse.compare.CompareEditorInput.setFocus() is no longer API' is no longer used (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.team.ui
org.eclipse.jsch.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,19 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (January 12, 2010, 12:37 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=73683">Bug 73683</a>. [Apply Patch] Add URL option Apply Patch dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272865">Bug 272865</a>. 'Ignore White Space Where Applicable' should not change caret location (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=287421">Bug 287421</a>. 'Copy Current Change' should not go to next difference (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=297950">Bug 297950</a>. CompareEditorInputs are leaked when reusing editors (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298034">Bug 298034</a>. Add keywords for Workbench Wizards (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298843">Bug 298843</a>. org.eclipse.jsch.core falsely depends on .core.resources, barring use in RCP (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299100">Bug 299100</a>. AFE in SynchronizeView.getViewer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299262">Bug 299262</a>. The API problem filter for: 'The method org.eclipse.compare.CompareEditorInput.setFocus() is no longer API' is no longer used (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 09, 2009, 12:32 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
