*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,28 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 13, 2010, 2:10 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=285095">Bug 285095</a>. [Viewers] New column scrolling breaks on first cell selection if you have scrolled the table (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=289090">Bug 289090</a>. [CommonNavigator] labels are missing (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=293235">Bug 293235</a>. [backport][Import/Export] Timestamps updated on archive export and on project import (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=295557">Bug 295557</a>. [KeyBindings] Exporting key preferences to CSV does not allow context being null (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296253">Bug 296253</a>. [CommonNavigator] An empty label is not properly shown when it is the only contributed label (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299246">Bug 299246</a>. [CommonNavigator] Add model objects for new CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299249">Bug 299249</a>. [CommonNavigator] Add ResourceWrapperContent/Label provider for new CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299251">Bug 299251</a>. [CommonNavigator] Model label and content providers for additional pipeline CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299255">Bug 299255</a>. [CommonNavigator] Hook new CNF tests to plugin.xml (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299304">Bug 299304</a>. [CommonNavigator] Test contribution for CNF (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299322">Bug 299322</a>. [CommonNavigator] Test contribution for CNF (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299324">Bug 299324</a>. [CommonNavigator] Add new test Pipeline content provider (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299325">Bug 299325</a>. [CommonNavigator] Add plugin.xml configuration for new pipeline tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299326">Bug 299326</a>. [CommonNavigator] Add new test for CNF pipelining (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299331">Bug 299331</a>. [CommonNavigator] Compile errors in new CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299340">Bug 299340</a>. [CommonNavigator] Enable new CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299345">Bug 299345</a>. [CommonNavigator] Move expanded HEAD CNF tests to 3.5.2 (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 07, 2010, 11:21 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
