--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,11 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 15, 2010, 9:57 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+  </p>
+
 <p>Integration Build (January 11, 2010, 6:03 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
