*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,22 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 18, 2010, 10:55 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298153">Bug 298153</a>. [Workbench] API use problems in o.e.ui.workbench (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298671">Bug 298671</a>. Implement enough compatibility to bring up a simple view (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299322">Bug 299322</a>. [CommonNavigator] Test contribution for CNF (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299324">Bug 299324</a>. [CommonNavigator] Add new test Pipeline content provider (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299325">Bug 299325</a>. [CommonNavigator] Add plugin.xml configuration for new pipeline tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299326">Bug 299326</a>. [CommonNavigator] Add new test for CNF pipelining (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299331">Bug 299331</a>. [CommonNavigator] Compile errors in new CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299340">Bug 299340</a>. [CommonNavigator] Enable new CNF tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299385">Bug 299385</a>. [UI] clean up errors in compatibility workbench (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299426">Bug 299426</a>. provide tweaklet in o.e.ui.tests to allow e4 compat to run the tests (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299619">Bug 299619</a>. [DataBinding] SetSimpleValueObservableMap and MapSimpleValueObservableMap have wrong key/value types (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 15, 2010, 9:57 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
