*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 19, 2010, 8:01 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=295803">Bug 295803</a>. [CommonNavigator] Source of Contribution set to lowest priority NCE, not the NCE providing the children (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296728">Bug 296728</a>. [CommonNavigator] Problem with enablement on navigatorContent extension point (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299438">Bug 299438</a>. [CommonNavigator] CNF viewer state non properly reset when NCEs are activated or deactivated (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299706">Bug 299706</a>. [CommonNavigator] org.eclipse.ui.navigator bundle needs to be incremented in 3.5.2 stream (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 13, 2010, 2:10 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
