*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,37 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 21, 2010, 5:06 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=94796">Bug 94796</a>. [EditorMgmt] 'Save All Modified Resources' job is unnamed (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=193361">Bug 193361</a>. [EditorMgmt] Unexpected behaviour opening sample XML editor (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=205043">Bug 205043</a>. [Commands] Dynamically loading plugin causes command framework error (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=236104">Bug 236104</a>. [EditorMgmt] File association default needs to be set twice to take effect (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255556">Bug 255556</a>. [Contributions] Extension point org.eclipse.ui.popupMenus has a typo: java.lang.object (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262795">Bug 262795</a>. [Min/Max] Unmaximize editor area unreliable when editor area is split (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=288624">Bug 288624</a>. [EditorMgmt] Mac: Error when browsing to external editor and then launching (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=291069">Bug 291069</a>. [Commands] IWorkbenchCommandConstants should also define command parameter ids (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=295803">Bug 295803</a>. [CommonNavigator] Source of Contribution set to lowest priority NCE, not the NCE providing the children (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296042">Bug 296042</a>. [Help] Add warnings for duplicate Context Sensitive Help ids on UI elements when debug is enabled (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296466">Bug 296466</a>. [GlobalActions] Can't remove 'Build All' from toolbar (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296566">Bug 296566</a>. Use "subtle" icon decorators for Virtual Folders (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296691">Bug 296691</a>. Change new Groups API to Virtual Resource API (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296728">Bug 296728</a>. [CommonNavigator] Problem with enablement on navigatorContent extension point (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=296748">Bug 296748</a>. [FieldAssist] remove the deprecated SimpleContentProposal (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=297271">Bug 297271</a>. [Undo] AbstractWorkspaceOperation and its subclasses don't have @noextend API tags (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298747">Bug 298747</a>. [EditorMgmt] Bidi Incorrect file type direction in mirrored "Editor Selection" dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299335">Bug 299335</a>. [Progress] Finished Tasks Still Show In Progress View (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299438">Bug 299438</a>. [CommonNavigator] CNF viewer state non properly reset when NCEs are activated or deactivated (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299661">Bug 299661</a>. [CommonNavigator] Overridden hasChildren() broken. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299954">Bug 299954</a>. [Dialogs] FilteredItemsSelectionDialog prefix matches are sorted before camel case matches (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300012">Bug 300012</a>. [CommonNavigator] CNF test improvements (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300032">Bug 300032</a>. [Markers] NPE in MarkerFieldFilterGroup.selectByScope (CLOSED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300198">Bug 300198</a>. [CommonNavigator] LabelProviderTest.testChangeActivation() fails (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300212">Bug 300212</a>. [CommonNavigator] Popup menu items cannot be created in Project Explorer using the Command Framework (WORKSFORME)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300220">Bug 300220</a>. [Undo] TriggeredOperations should implement IAdvancedUndoableOperation2 (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 18, 2010, 10:55 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
