*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 25, 2010, 1:55 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=4922">Bug 4922</a>. [EditorMgmt] Need ability to open a file in eclipse from the command line (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=201301">Bug 201301</a>. [Workbench] Users should be able to find out who contributed a view/editor/toolbar item/job/preference page/... (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=270494">Bug 270494</a>. [DataBinding] Add support for IPostSelectionProvider (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 21, 2010, 5:06 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
