The map file has been updated for the following Bug changes: + Bug 280729. Problems in SyncInfoCompareInput (FIXED) + Bug 300054. Unexpected 'Save Resource' dialog appears when copying changes from right to left (FIXED) + Bug 300772. Dead code in Platform Team (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (January 26, 2010, 11:19 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=280729">Bug 280729</a>. Problems in SyncInfoCompareInput (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300054">Bug 300054</a>. Unexpected 'Save Resource' dialog appears when copying changes from right to left (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300772">Bug 300772</a>. Dead code in Platform Team (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 12, 2010, 12:37 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
