--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (styczeñ 26, 2010, 1:52 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298923">Bug 298923</a>. [Sync View][Apply patch] Merge changes from dev branch back to HEAD (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 26, 2010, 11:19 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
