--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 26, 2010, 4:35 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262795">Bug 262795</a>. [Min/Max] Unmaximize editor area unreliable when editor area is split (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298835">Bug 298835</a>. Merge e4 Project Path Variable back into the 3.6 stream (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 25, 2010, 1:55 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
