*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 27, 2010, 5:37 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=201301">Bug 201301</a>. [Workbench] Users should be able to find out who contributed a view/editor/toolbar item/job/preference page/... (REOPENED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300899">Bug 300899</a>. Endless OpenDoc events (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 26, 2010, 4:35 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
