The map file has been updated for the following Bug changes: + Bug 278094. NPE in SyncFileWriter.getInputStream (FIXED) + Bug 299625. Restore from Repository dialog too small and does not remember size (FIXED) + Bug 300660. Typo in ResourceModelTraversalCalculator.PROP_TRAVERSAL_CALCULATOR constant (FIXED) + Bug 300694. Setting enablement for Mark as Merged and Overwrite actions in ModelCompareEditorInput is copy-pasted (FIXED) + Bug 301114. [Sync View] appendToGroup for "Expand All" button adds it in wrong place (FIXED)
The following projects have changed:
org.eclipse.team.cvs.core
org.eclipse.team.cvs.ui
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,7 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
-<p>Integration Build (styczeñ 26, 2010, 1:52 p.m.)</p>
+<p>Integration Build (February 02, 2010, 12:24 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278094">Bug 278094</a>. NPE in SyncFileWriter.getInputStream (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299625">Bug 299625</a>. Restore from Repository dialog too small and does not remember size (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300660">Bug 300660</a>. Typo in ResourceModelTraversalCalculator.PROP_TRAVERSAL_CALCULATOR constant (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300694">Bug 300694</a>. Setting enablement for Mark as Merged and Overwrite actions in ModelCompareEditorInput is copy-pasted (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=301114">Bug 301114</a>. [Sync View] appendToGroup for "Expand All" button adds it in wrong place (FIXED)<br>
+  </p>
+
+<p>Integration Build (stycze? 26, 2010, 1:52 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
 <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298923">Bug 298923</a>. [Sync View][Apply patch] Merge changes from dev branch back to HEAD (FIXED)<br>
