*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,29 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (February 08, 2010, 4:02 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=122772">Bug 122772</a>. [Wizards] NewWizardAction would be able to customize the title and description of the opened wizard (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=161693">Bug 161693</a>. [Contributions] Cannot show the items defined in "contributeToCoolBar" function of the ActionBarContributor (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=205747">Bug 205747</a>. [Contributions] Adding top-level menus using IMenuService does not work (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=243742">Bug 243742</a>. [Contributions] Registering a PRIVATE popup menu (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283449">Bug 283449</a>. [Jobs] Add ability to temporarily yield a Job so that blocked jobs are given a chance to execute. (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=297054">Bug 297054</a>. [Contributions] extension of org.eclipse.jface.action.StatusLineContributionItem that should not "guess" contribution width (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298671">Bug 298671</a>. Implement enough compatibility to bring up a simple view (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299385">Bug 299385</a>. [UI] clean up errors in compatibility workbench (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=299426">Bug 299426</a>. provide tweaklet in o.e.ui.tests to allow e4 compat to run the tests (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300502">Bug 300502</a>. Add UI for finer grained file permissions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300758">Bug 300758</a>. Bring Eclipse window to the front when opening file from command line (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300846">Bug 300846</a>. Add "Resolve Values" switch to Path Variables property page (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300862">Bug 300862</a>. Change buttons order in PathVariableDialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=301133">Bug 301133</a>. Unhide the linked resources locations tab in the Linked Resources property page (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=301370">Bug 301370</a>. [DataBinding] MapSimpleValueObservableMapTest.put() returns wrong replaced value (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=301410">Bug 301410</a>. [DataBinding] NPE in ListSimpleValueObservableList on dispose (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=301442">Bug 301442</a>. [LinkedResources] [IDE] New resource-related project properties pages should be children of Resource (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=301834">Bug 301834</a>. Show heap status option in General preferences does not have a filter keyword (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 27, 2010, 5:37 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
