The map file has been updated for the following Bug changes: + Bug 301517. Fix compiler warnings in compare.core (FIXED) + Bug 301796. CVS Repositories view should keep tree stable when pending updates done (FIXED)
The following projects have changed:
org.eclipse.compare.core
org.eclipse.team.cvs.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (February 09, 2010, 1:23 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=301517">Bug 301517</a>. Fix compiler warnings in compare.core (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=301796">Bug 301796</a>. CVS Repositories view should keep tree stable when pending updates done (FIXED)<br>
+  </p>
+
 <p>Integration Build (February 02, 2010, 12:24 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
