The map file has been updated for the following Bug changes: + Bug 272975. [Preferences] 'Network Connections' preference page does not inherit dialog font (FIXED) + Bug 295356. [Sync View] Link with Editor not working for outgoing deleted element (FIXED) + Bug 298925. [Project Sets] NullPointerException on import psf action (FIXED) + Bug 300217. [Sync View][Apply Patch] Add 'Open' and 'Open With' actions to elements in Patch Contents model (FIXED) + Bug 300225. [Sync View][Apply Patch] Compare editor for an element from Patch Contents model opens empty (FIXED) + Bug 300346. [Sync View][Apply Patch] Hunks should not have [+] widget next to them (FIXED) + Bug 300347. [Sync View][Apply Patch] Fix hunks sorting (FIXED) + Bug 302163. [Sync View] Error message during update operation after synchronization (ASSIGNED) + Bug 302583. Redundant superinterface ITypedElement for the type DiffNode, already defined by IDiffElement (FIXED) + Bug 302840. [Tests] NPE in testNullInfoMap in N20100213-2000 (FIXED)
The following projects have changed:
org.eclipse.ui.net
org.eclipse.compare
org.eclipse.team.cvs.core
org.eclipse.team.cvs.ui
org.eclipse.team.ui
org.eclipse.team.tests.cvs.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,21 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (February 16, 2010, 12:35 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272975">Bug 272975</a>. [Preferences] 'Network Connections' preference page does not inherit dialog font (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=295356">Bug 295356</a>. [Sync View] Link with Editor not working for outgoing deleted element (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=298925">Bug 298925</a>. [Project Sets] NullPointerException on import psf action (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300217">Bug 300217</a>. [Sync View][Apply Patch] Add 'Open' and 'Open With' actions to elements in Patch Contents model (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300225">Bug 300225</a>. [Sync View][Apply Patch] Compare editor for an element from Patch Contents model opens empty (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300346">Bug 300346</a>. [Sync View][Apply Patch] Hunks should not have [+] widget next to them (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300347">Bug 300347</a>. [Sync View][Apply Patch] Fix hunks sorting (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=302163">Bug 302163</a>. [Sync View] Error message during update operation after synchronization (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=302583">Bug 302583</a>. Redundant superinterface ITypedElement for the type DiffNode, already defined by IDiffElement (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=302840">Bug 302840</a>. [Tests] NPE in testNullInfoMap in N20100213-2000 (FIXED)<br>
+  </p>
+
 <p>Integration Build (February 09, 2010, 1:23 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
