The map file has been updated for the following Bug changes: + Bug 300238. [Sync View][Apply Patch] Java structure shown only for hunks (FIXED) + Bug 303061. Patch to remove dead code (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (February 23, 2010, 1:41 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300238">Bug 300238</a>. [Sync View][Apply Patch] Java structure shown only for hunks (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=303061">Bug 303061</a>. Patch to remove dead code (FIXED)<br>
+  </p>
+
 <p>Integration Build (February 16, 2010, 12:35 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
