The map file has been updated for the following Bug changes: + Bug 291213. [Sync View] Linking from Sync view to compare editors doesn't work (FIXED) + Bug 300229. [Sync View][Apply Patch] Make Compare editor for an element from Patch Contents model editable (FIXED) + Bug 300231. [Sync View][Apply Patch] Remove "Overwrite" action from compare editor's context menu (FIXED) + Bug 300237. [Sync View][Apply Patch] Copying changes from right to left results in a conflict (FIXED) + Bug 301243. [Sync View][Apply Patch] Remove 'Schedule' action for patch synchronizations (FIXED) + Bug 302163. [Sync View] Error message during update operation after synchronization (FIXED) + Bug 303888. [Sync View][Apply Patch] Add "Merge" action to compare editor for 'Patch Contents' model (FIXED) + Bug 304034. Compiler warnings in I20100225-1936 (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.compare.tests
org.eclipse.team.ui
org.eclipse.team.tests.cvs.core
org.eclipse.team.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,19 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (March 02, 2010, 1:14 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=291213">Bug 291213</a>. [Sync View] Linking from Sync view to compare editors doesn't work (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300229">Bug 300229</a>. [Sync View][Apply Patch] Make Compare editor for an element from Patch Contents model editable (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300231">Bug 300231</a>. [Sync View][Apply Patch] Remove "Overwrite" action from compare editor's context menu (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=300237">Bug 300237</a>. [Sync View][Apply Patch] Copying changes from right to left results in a conflict (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=301243">Bug 301243</a>. [Sync View][Apply Patch] Remove 'Schedule' action for patch synchronizations (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=302163">Bug 302163</a>. [Sync View] Error message during update operation after synchronization (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=303888">Bug 303888</a>. [Sync View][Apply Patch] Add "Merge" action to compare editor for 'Patch Contents' model (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=304034">Bug 304034</a>. Compiler warnings in I20100225-1936 (FIXED)<br>
+  </p>
+
 <p>Integration Build (February 23, 2010, 1:41 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
